# pcl_practice

./: .gitignore  README.md  _PCLDefaultTools.lnk
PCL00_Template/src/: CMakeLists.txt
PCL20_MultiViewPort/src/: voxel_grid.cpp
PCL21_QtVisualizer/src/: main.cpp  pclviewer.cpp  pclviewer.h
PCL21_QtVisualizer/src/qt/: pclviewer.ui.autosave
PCL22_3DArticulationRecognition/src/: CMakeLists.txt  articulation_detection.cpp  main.cpp
PCL23_SegmentCorrespondence/src/: CMakeLists.txt
PCL24_RegionGrowingSegmentation/src/: CMakeLists.txt  region_growing_segmentation.cpp
PCL25_ClusterExtraction/src/: CMakeLists.txt  cluster_extraction.cpp
PCL26_SeparateByColor/src/: CMakeLists.txt  readme.md  separate_bycolor.cpp
PCLProject01/ConsoleApplication1/: ConsoleApplication1.sln
PCLProject01/ConsoleApplication1/ConsoleApplication1/: CMakeLists.txt  ConsoleApplication1.vcxproj  pcd_write.cpp
PCLProject02_Training/: pcd_write.cpp
PCLProject03/: CMakeLists.txt  PCLProject03.props  main.cpp
PCLProject05_RANSAC02/: random_sample_consensus.cpp
PCLProject06_Filters/: passthrough.cpp
PCLProject08_KinectNoGrabber/: main.cpp
PCLProject09_InteractiveIterative/: interactive_icp.cpp
PCLProject10_3DObjectRecognition/: correspondence_grouping.cpp
PCLProject11_ClusterRecognition_6DoFPoseEstimationVFH/: CMakeLists.txt
PCLProject12_Tracking/src/: CMakeLists.txt  tracking_sample.cpp
PCLProject13_Visualization_Duplicate/src/: cloud_viewer.cpp
PCLProject14_Kinectv2PCL/: README.md
PCLProject14_Kinectv2PCL/src/: main.cpp
PCLProject15_Kinectv2PC_woGrabber/src/: main.cpp
PCLProject18_OpenNI2Viewer/src/: CMakeLists.txt  Readme.md  openni2_viewer.cpp
PCLProject19_VoxelGrid/src/: voxel_grid.cpp
